creact jobdetail both frontend and backend